--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
     <modules>
         <module>course</module>
         <module>core</module>
+        <module>br.com.ricardo.microservices.discovery</module>
+        <module>gateway</module>
+        <module>discovery</module>
     </modules>
 
     <properties>
