--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -9,44 +9,36 @@
         <relativePath>../</relativePath> <!-- lookup parent from repository -->
     </parent>
 
-    <artifactId>discovery</artifactId>
+    <artifactId>auth</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>discovery</name>
-    <description>Service Discovery</description>
+    <name>auth</name>
+    <description>Authentication Service</description>
 
     <properties>
         <java.version>11</java.version>
-        <jaxb-api.version>2.3.1</jaxb-api.version>
-        <jaxb-runtime.version>2.3.2</jaxb-runtime.version>
-        <javax-activation.version>1.1.1</javax-activation.version>
+        <devdojo-core.version>1.0-SNAPSHOT</devdojo-core.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <groupId>br.com.ricardo.microservices</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>${jaxb-api.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.activation</groupId>
-            <artifactId>activation</artifactId>
-            <version>${javax-activation.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-runtime</artifactId>
-            <version>${jaxb-runtime.version}</version>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <build>
-        <finalName>discovery</finalName>
+        <finalName>course</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
