--- a/course/pom.xml
+++ b/course/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>course</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>course</name>
-	<description>Spring Boot Microservices</description>
+	<description>Course Service</description>
 
 	<properties>
 		<java.version>11</java.version>
