--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>gateway</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>gateway</name>
-    <description>Microservice Gateway</description>
+    <description>Gateway Service</description>
 
     <properties>
         <java.version>11</java.version>
