--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>br.com.ricardo.microservices.discovery</module>
         <module>gateway</module>
         <module>discovery</module>
+        <module>auth</module>
     </modules>
 
     <properties>
