-Moving token to a separate module

--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -17,14 +17,22 @@
     <properties>
         <java.version>11</java.version>
         <devdojo-core.version>1.0-SNAPSHOT</devdojo-core.version>
+        <devdojo-token.version>1.0-SNAPSHOT</devdojo-token.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>br.com.ricardo.microservices</groupId>
-            <artifactId>core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>token</artifactId>
+            <version>${devdojo-token.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>br.com.ricardo.microservices</groupId>
+            <artifactId>core</artifactId>
+            <version>${devdojo-core.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
