--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>gateway</module>
         <module>discovery</module>
         <module>auth</module>
+        <module>token</module>
     </modules>
 
     <properties>
