--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -16,9 +16,22 @@
 
     <properties>
         <java.version>11</java.version>
+        <devdojo-token.version>1.0-SNAPSHOT</devdojo-token.version>
+        <devdojo-core.version>1.0-SNAPSHOT</devdojo-core.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>br.com.ricardo.microservices</groupId>
+            <artifactId>token</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>br.com.ricardo.microservices</groupId>
+            <artifactId>core</artifactId>
+            <version>${devdojo-core.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
