--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -27,3 +27,7 @@ spring:
     url: jdbc:mysql://localhost:3306/devdojo?allowPublicKeyRetrieval=true&sslMode=DISABLED
     username: root
     password: devdojo
+
+jwt:
+  config:
+    type: signed
